<resources>
    <string name="app_name">Quotify</string>
    <string name="text_size_setting">Text size</string>
    <string name="text_color_setting">Text color</string>
    <string name="background_seting">Background</string>
    <string name="solid_color_background">Solid Background</string>
    <string name="select_solid_background">Select Background colour</string>
    <string name="enable_gradient_background">Enable gradient background</string>
    <string name="gradient_color_background">Gradient Background</string>
    <string name="gradient_color_1">Select color 1</string>
    <string name="gradient_color_2">Select color 2</string>
    <string name="font_type">Select font</string>
    <string name="quote_hint">Write your quote here</string>
    <string name="panel_header">Write Quote</string>
    <string name="sign_out_btn_text">Sign out</string>
    <string name="delete_image">Delete</string>
    <string name="share_image">Share</string>
    <string name="please_wait">Please wait…</string>
    <string name="classic_error">Oops! something wrong happened</string>
    <string name="error_deleting_file">Can\'t Delete the File</string>
    <string name="permission_error">Requires storage permission go to SETTINGS -> APPS AND NOTIFICATIONS -> APP INFO -> QUOTIFY -> PERMISSIONS -> ALLOW STORAGE</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_msg_no_auth">Click Here To Login</string>
    <string name="dialog_editor_activity_dialog_msg">Are you sure you want to exit without saving changes ?</string>
    <string name="dialog_editor_activity_dialog_stay">Stay</string>
    <string name="dialog_editor_activity_dialog_exit">Leave</string>
    <string name="error_sharing_image">Error in sharing image</string>
    <string name="dialog_delete_msg">Are you sure you want to Delete this file ?</string>
    <string name="dialog_msg_delete">Delete</string>
    <string name="dialog_msg_cancel">Cancel</string>
    <string name="empty_view_main_msg">It\'s so empty here lets create something</string>
    <string name="you_have_no_quotes_yet">You have no quotes yet</string>
    <string name="widget_no_data">Tap to refresh</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="slide_up">Slide Up</string>
    <string name="slide_down">Slide Down</string>
    <string name="image_slider">Image Slider</string>
    <string name="fullscreen_toolbar">Fullscreen Toolbar</string>
    <string name="area_to_write_quote">Area to write quote</string>
    <string name="accept">Accept</string>
    <string name="content_desc_cancel">Cancel</string>
    <string name="all_images_list">All images list</string>
    <string name="add_a_quote">Add a quote</string>
    <string name="select_color">Select Color</string>
    <string name="select_second_colour">select second colour</string>
    <string name="enable_gradient">Enable gradient settings</string>
    <string name="slide_up_and_down">Slide Up and down</string>
    <string name="quote_image">Quote image</string>
    <string name="editor_view">Editor view</string>
    <string name="change_quote_size">Change quote size</string>
    <string name="select_text_colour">Select text colour</string>
    <string name="content_desc_font_type">Select font type</string>
    <string name="content_desc_upload">Upload Image</string>
    <string name="error_image">Error image</string>
    <string name="write_quote">Write quote</string>
    <string name="sign_out">User sign out</string>
    <string name="personal_image_collection">Personal image collection</string>
</resources>
