<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        android:contentDescription="@string/all_images_list"
        android:padding="0dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/empty_view_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view_main_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/main_empty_add_button"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:src="@drawable/ic_add_white_24px"
            android:layout_margin="@dimen/default_padding_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/add_a_quote"/>
    </LinearLayout>

</FrameLayout>